[tool.poetry]
name = "pyyaledoorman"
version = "1.0.0"
description = "Pyyaledoorman"
authors = ["Espen Fjellvær Olsen <espen@mrfjo.org>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/espenfjo/pyyaledoorman"
repository = "https://github.com/espenfjo/pyyaledoorman"
documentation = "https://pyyaledoorman.readthedocs.io"
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

[tool.poetry.urls]
Changelog = "https://github.com/espenfjo/pyyaledoorman/releases"

[tool.poetry.dependencies]
python = "^3.9.0"
traitlets = "^5.0.5"
aiohttp = "^3.7.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
coverage = {extras = ["toml"], version = "^5.4"}
safety = "^1.10.3"
mypy = "^0.812"
typeguard = "^2.12.1"
xdoctest = {extras = ["colors"], version = "^0.15.4"}
sphinx = "^3.5.4"
sphinx-autobuild = "^2021.3.14"
pre-commit = "^2.12.1"
flake8 = "^3.9.1"
black = "^20.8b1"
flake8-bandit = "^2.1.2"
flake8-bugbear = "^21.4.3"
flake8-docstrings = "^1.6.0"
flake8-rst-docstrings = "^0.2.3"
pep8-naming = "^0.11.1"
darglint = "^1.8.0"
reorder-python-imports = "^2.5.0"
pre-commit-hooks = "^3.4.0"
sphinx-rtd-theme = "^0.5.2"
Pygments = "^2.9.0"
aioresponses = "^0.7.2"
pytest-aiohttp = "^0.3.0"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["pyyaledoorman"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
